add jwtAuth
